manifests/base/reference-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-server
  labels:
    app.kubernetes.io/role: static-server
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app.kubernetes.io/name: static-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: static-server
    spec:
      containers:
      - name: static-server
        image: quay.io/cybozu/training-troubleshooting:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
        resources:
          requests:
            memory: "50Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - "static-server"
              topologyKey: "kubernetes.io/hostname"
