manifests/base/reference-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-server
spec:
  ports:
  - port: 8080
  selector:
    app.kubernetes.io/name: static-server
